# Fake-it-till-VQs-make-it

./: .gitignore  CHANGELOG.md  README.md  WORKFLOW.md  intro_meme.tex  lenses_diagram_simple.tex  makefile  readme.md  transfer.md  workflow.md
src/: README.md  combined_extractor.py  deep_fake_classifier_pipeline.py  experiment.md  extractor_config.yaml  extractor_factory.py  feature_extractor.py  forensic_extractor.py  lens_features_extractor.py  multi_encoder_extractor.py  pyproject.toml  solution.py  spectral_extractor.py  spectral_forensic_extractor.py  spectral_forensic_lens_extractor.py  spectral_forensic_lens_fingerprint_extractor.py  spectral_forensic_lens_onnx_extractor.py  test.py
src/extractors/: combined_extractor.py  lens_features_extractor.py  multi_encoder_extractor.py  residual_methods.py  spectral_forensic_extractor.py  spectral_forensic_lens_extractor.py  spectral_forensic_lens_fingerprint_extractor.py  spectral_forensic_lens_onnx_extractor.py
src/features/: class_names.json  feature_names.json  test_X.npy  test_paths.json  train_X.npy  train_paths.json  train_y.npy  val_X.npy  val_paths.json  val_subs.json
src/models/: best.joblib  hgb.joblib  logreg.joblib  results.json
tex/: lenses_figures.tex  lenses_formulas.tex
